@@ -4,6 +4,7 @@ import net.origins.inventive_inventory.util.slots.PlayerSlots;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class LockedSlots extends ArrayList<Integer> {
     public LockedSlots(List<Integer> list) {
@@ -12,7 +13,7 @@ public class LockedSlots extends ArrayList<Integer> {
 
     public LockedSlots adjust() {
         int start = PlayerSlots.get().getFirst();
-        return new LockedSlots(this.stream().map(slot -> slot + start).toList());
+        return new LockedSlots(this.stream().map(slot -> slot + start).collect(Collectors.toList()));
     }
 
     public LockedSlots unadjust() {
